# pdf-image-extractor

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
docs/plans/: 2026-04-07-baota-deployment-design.md  2026-04-07-baota-deployment.md  2026-04-07-bilingual-ui-design.md  2026-04-07-bilingual-ui.md  2026-04-07-open-source-positioning-design.md  2026-04-07-open-source-positioning.md  2026-04-07-upload-workspace-polish-design.md  2026-04-07-upload-workspace-polish.md
pic_extractor/: __init__.py  config.py  main.py
pic_extractor/services/: __init__.py  pdf_extractor.py
pic_extractor/templates/: index.html
tests/: conftest.py  test_app.py  test_pdf_extractor.py
